--- a/index.html
+++ b/index.html
@@ -43,8 +43,27 @@
                 <p>28 Jun 2020</p>
               </div>
             </div>
+            <div class="btn-social">
+              <img src="./images/icon-share.svg" alt="share" />
+            </div>
+
+            <!-- social buttons  -->
             <div class="socials">
-              <button><img src="./images/icon-share.svg" alt="share" /></button>
+              <div class="social-btns__position">
+                <div class="social-btns">
+                  <h4 class="share">share</h4>
+
+                  <button class="social-btn">
+                    <img src="./images/icon-facebook.svg" alt="facebook" />
+                  </button>
+                  <button class="social-btn">
+                    <img src="./images/icon-twitter.svg" alt="twitter" />
+                  </button>
+                  <button class="social-btn">
+                    <img src="./images/icon-pinterest.svg" alt="pinterest" />
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
