--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!-- social buttons  -->
             <div class="socials">
               <div class="social-btns__position">
-                <div class="social-btns">
+                <div class="social-btns hide">
                   <h4 class="share">share</h4>
 
                   <button class="social-btn">
