--- a/index.html
+++ b/index.html
@@ -19,50 +19,48 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    <div class="container">
-      <div class="card">
-        <div class="img-drawer">
-          <img src="./images/drawers.jpg" alt="drawer" />
-        </div>
-        <div class="describer-card">
-          <h2>
-            Shift the overall look and feel by adding these wonderful touches to
-            furniture in your home
-          </h2>
+    <div class="card">
+      <div class="img-drawer">
+        <img src="./images/drawers.jpg" alt="drawer" />
+      </div>
+      <div class="describer-card">
+        <h2>
+          Shift the overall look and feel by adding these wonderful touches to
+          furniture in your home
+        </h2>
 
-          <p>
-            Ever been in a room and felt like something was missing? Perhaps it
-            felt slightly bare and uninviting. I’ve got some simple tips to help
-            you make any room feel complete.
-          </p>
-          <div class="described">
-            <div class="author">
-              <img src="./images/avatar-michelle.jpg" alt="avatar" />
-              <div class="name">
-                <h3>Michelle Appleton</h3>
-                <p>28 Jun 2020</p>
-              </div>
+        <p>
+          Ever been in a room and felt like something was missing? Perhaps it
+          felt slightly bare and uninviting. I’ve got some simple tips to help
+          you make any room feel complete.
+        </p>
+        <div class="described">
+          <div class="author">
+            <img src="./images/avatar-michelle.jpg" alt="avatar" />
+            <div class="name">
+              <h3>Michelle Appleton</h3>
+              <p>28 Jun 2020</p>
             </div>
-            <div class="btn-social">
-              <img src="./images/icon-share.svg" alt="share" />
-            </div>
+          </div>
+          <div class="btn-social">
+            <img src="./images/icon-share.svg" alt="share" />
+          </div>
 
-            <!-- social buttons  -->
-            <div class="socials">
-              <div class="social-btns__position">
-                <div class="social-btns hide">
-                  <h4 class="share">share</h4>
+          <!-- social buttons  -->
+          <div class="socials hide">
+            <div class="social-btns__position">
+              <div class="social-btns">
+                <h4 class="share">share</h4>
 
-                  <button class="social-btn">
-                    <img src="./images/icon-facebook.svg" alt="facebook" />
-                  </button>
-                  <button class="social-btn">
-                    <img src="./images/icon-twitter.svg" alt="twitter" />
-                  </button>
-                  <button class="social-btn">
-                    <img src="./images/icon-pinterest.svg" alt="pinterest" />
-                  </button>
-                </div>
+                <button class="social-btn">
+                  <img src="./images/icon-facebook.svg" alt="facebook" />
+                </button>
+                <button class="social-btn">
+                  <img src="./images/icon-twitter.svg" alt="twitter" />
+                </button>
+                <button class="social-btn">
+                  <img src="./images/icon-pinterest.svg" alt="pinterest" />
+                </button>
               </div>
             </div>
           </div>
