mobile responsive design

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <img src="./images/icon-share.svg" alt="share" />
           </div>
 
-          <!-- social buttons  -->
+          <!-- social buttons  hide-->
           <div class="socials hide">
             <div class="social-btns__position">
               <div class="social-btns">
